Adds language support and fixes trade behavior
Adds support for multiple languages to the app, including a language selection setting.
This introduces a new "General" tab in the settings panel for language selection.
Also, fixes an issue related to trading mutable items.

--- a/src-tauri/resources/lang/en.json
+++ b/src-tauri/resources/lang/en.json
@@ -975,6 +975,16 @@
       },
       "settings": {
         "tabs": {
+          "general": {
+            "title": "General",
+            "fields": {
+              "language": {
+                "label": "Language",
+                "placeholder": "Select Language",
+                "error": "Invalid language"
+              }
+            }
+          },
           "themes": {
             "title": "Themes",
             "community_themes": "Community Themes",
