Adds settings entity and CRUD service
Adds a new entity for managing application settings, including database migration and service layer functions for CRUD operations.

Also includes a new language system based on the new setting entity for dynamically updating item names and other translatable fields in database.
A new translation system is implemented.
A migration for the setting table is added.
A new translation system is implemented.
A new setting entity is added.
UIEvent is implemented
Several translation keys are added in the translation files.

--- a/src-tauri/resources/lang/en.json
+++ b/src-tauri/resources/lang/en.json
@@ -485,6 +485,19 @@
       "success": "Success"
     }
   },
+  "context": {
+    "app": {
+      "starting_up": "Starting up...",
+      "database": {
+        "updating_names": "Updating names in database please be patient..."
+      },
+      "cache": {
+        "initializing": "Initializing cache...",
+        "updating": "Updating cache...",
+        "item_price_updating": "Updating item prices..."
+      }
+    }
+  },
   "components": {
     "item_component": "<blue>{{name}}</blue> x<blue>{{count}}</blue>",
     "item_components": "Item Components",
@@ -515,9 +528,6 @@
         "riven": "MR: <blue>{{mastery_level}}</blue> Rank: <blue>{{mod_rank}}</blue> Re-rolls: <blue>{{re_rolls}}</blue> Polarity: <polarity/>",
         "selling_price": "Selling Price: <blue>{{price}}</blue> <plat/>"
       }
-    },
-    "riven_attribute": {
-      "effect": "<num_color_tag>{{value}}</num_color_tag> {{name}}"
     },
     "live_scraper_control": {
       "buttons": {
