Adds Stock Riven Details Overview Tab
Implements an overview tab for the stock riven details modal.

This tab displays key information about the riven, including creation and update timestamps, status, prices, and a price history list.

Also, refactors riven attribute display to include grade images.

--- a/src-tauri/resources/lang/en.json
+++ b/src-tauri/resources/lang/en.json
@@ -1475,7 +1475,24 @@
       "stock_riven_details": {
         "tabs": {
           "overview": {
-            "title": "Overview"
+            "title": "Overview",
+            "buttons": {
+              "wiki": "Wiki"
+            },
+            "fields": {
+              "created_at": "Created At",
+              "updated_at": "Updated At",
+              "status": "Status",
+              "minimum_price": "Minimum Price",
+              "owned": "Owned",
+              "bought": "Average Bought Price",
+              "list_price": "List Price",
+              "profit": "Profit",
+              "highest_price": "Highest Price",
+              "lowest_price": "Lowest Price",
+              "listed": "Listed Prices History",
+              "no_listed": "No previous listed prices"
+            }
           },
           "analytics": {
             "title": "Analytics",
