--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1022,6 +1022,7 @@
           "themes": {
             "title": "Themes",
             "community_themes": "Community Themes",
+            "get_more_out_of_themes": "Get more out of themes by using the Theme Editor Click Here",
             "theme_configuration": "Theme Configuration"
           },
           "notifications": {
