Improves item search with multi-token filtering
Fixed small bug with useStates, so input isn't empty on first interaction `setFilteredItems(mappedItems);`

Added falback message if no items found. `nothingFoundMessage`

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -956,6 +956,9 @@
             "placeholder": "Select amber stars...",
             "description": "How many amber stars"
           }
+        },
+        "messages": {
+          "nothing_found": "No items found"
         }
       },
       "select_riven_weapon": {
