Refactors home page and adds financial summary
Improves the home page by introducing a new financial summary component for better data visualization.

Removes the old tooltip implementation and creates a reusable financial summary component to display profit, expenses, revenue, and trade information.

Adds drag and drop functionality to trading analytics tab

Adds log parsing state

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1660,22 +1660,22 @@
           "quantity": "Quantity"
         }
       }
+    },
+    "bar_chart_financial_summary": {
+      "profit": "<expenseIco/> <blue>{{expense}}</blue> | <revenueIco/> <blue>{{revenue}}</blue> | <profitIco/> <blue>{{profit}}</blue>",
+      "trades": "<purchaseIco/> <blue>{{purchases}}</blue> | <saleIco/> <blue>{{sales}}</blue> | <tradeIco/> <blue>{{trades}}</blue>",
+      "tooltips": {
+        "expense": "Total expenses",
+        "revenue": "Total revenue",
+        "profit": "Total profit",
+        "trades": "Number of trades",
+        "sales": "Number of sales",
+        "purchases": "Number of purchases"
+      }
     }
   },
   "pages": {
     "home": {
-      "tooltips": {
-        "bar_chart": {
-          "footer": {
-            "expense": "Total expenses",
-            "revenue": "Total revenue",
-            "profit": "Total profit",
-            "trades": "Number of trades",
-            "sales": "Number of sales",
-            "purchases": "Number of purchases"
-          }
-        }
-      },
       "cards": {
         "total": {
           "title": "Total Profit",
@@ -1685,10 +1685,6 @@
             "datasets": {
               "this_year": "This Year",
               "last_year": "Last Year"
-            },
-            "footers": {
-              "profit": "<expenseIco/> <blue>{{expense}}</blue> | <revenueIco/> <blue>{{revenue}}</blue> | <profitIco/> <blue>{{profit}}</blue>",
-              "trades": "<purchaseIco/> <blue>{{purchases}}</blue> | <saleIco/> <blue>{{sales}}</blue> | <tradeIco/> <blue>{{trades}}</blue>"
             }
           }
         },
