Adds transaction history functionality
Enables users to view their transaction history by adding a new tab to the WFGDPR section.
This includes backend logic to retrieve and paginate transaction data.
Also renames 'In Game Purchases' to 'Purchases'.

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -2123,10 +2123,13 @@
             }
           },
           "purchase": {
-            "title": "In Game Purchases"
+            "title": "Purchases"
           },
           "login": {
             "title": "Login History"
+          },
+          "transaction": {
+            "title": "Transactions"
           }
         }
       }
