Updates application to version 1.6.12
Increments the application version to 1.6.12 across all relevant files.

Adds a new validation for the Warframe log path in the advanced settings. It now checks if the specified log path exists.
If the path does not exist, an error message is displayed, preventing the user from saving the settings with an invalid log path.

Refactors the settings form to use Mantine's `useForm` hook for managing form state and validation, removing individual `useState` hooks.

Removes the save buttons from the tabs since the save button will be on the bottom of the setting form.

Replaces the deprecated tray icon configuration.

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1087,7 +1087,9 @@
               "wf_log_path": {
                 "label": "Warframe Log Path",
                 "placeholder": "Default Warframe log path",
-                "error": "Invalid Warframe log path",
+                "errors": {
+                  "not_exists": "The specified path does not exist."
+                },
                 "tooltip": "The path to the Warframe log file. leave empty for default path."
               }
             },
