Allows disabling max total price cap
Enables users to disable the maximum total price cap by setting its value to -1.

Updates the tooltip to reflect this new functionality and adjusts the item processing logic to bypass the cap checks when disabled, providing users with greater trading flexibility.

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1226,7 +1226,7 @@
                     "label": "Max Total Price Cap",
                     "placeholder": "Max Total Price Cap",
                     "error": "Invalid max total price cap",
-                    "tooltip": "Maximum total price to consider for trading",
+                    "tooltip": "Maximum total price to consider for trading -1 for no limit",
                     "link": "https://quantframe.app/features/live-trading/settings/item/wtb#max-total-price-cap"
                   },
                   "price_shift_threshold": {
