Adds ability for users to add custom notification sounds
- added backend commands for sound file operations and storage
- updated settings schema to support custom notification sounds
- refactor of `EditNotificationSetting` to better readability
- implemented manage sounds view
- enhanced audio playback helper with custom path resolution and fallbacks

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -799,6 +799,44 @@
               "placeholder": "Enter webhook URL"
             }
           }
+        },
+        "manage_sounds": {
+          "title": "Add Custom Sound",
+          "buttons": {
+            "manage": "Manage Sounds",
+            "back": "Go Back"
+          },
+          "fields": {
+            "name": {
+              "placeholder": "Sound Name"
+            },
+            "file": {
+              "placeholder": "Select a file"
+            }
+          },
+          "tooltips": {
+            "add_sound": "Add Sound",
+            "play": "Play",
+            "delete": "Delete"
+          },
+          "table": {
+            "columns": {
+              "name": "Name",
+              "file_name": "File Name",
+              "actions": "Actions"
+            }
+          },
+          "dialog": {
+            "delete": {
+              "title": "Delete {{name}}",
+              "message": "Are you sure you want to delete this sound? This action cannot be undone.",
+              "confirm": "Delete",
+              "cancel": "Cancel"
+            }
+          },
+          "file_picker": {
+            "filter_name": "Audio"
+          }
         }
       },
       "riven_filter_attribute": {
