Adds labels and required fields to custom sound form - removed `<Text/>` stub

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -808,9 +808,11 @@
           },
           "fields": {
             "name": {
+              "label": "Sound Name",
               "placeholder": "Sound Name"
             },
             "file": {
+              "label": "Sound File",
               "placeholder": "Select a file"
             }
           },
