Adds better validation for Riven attributes - ensures that atribute values cannot be zero

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -949,6 +949,10 @@
             "label": "Attributes",
             "error": "Riven must have at least 2 positive attributes"
           },
+          "attribute": {
+            "label": "Attribute",
+            "error": "Attribute values cannot be 0"
+          },
           "mod_name": {
             "label": "Mod Name",
             "placeholder": "Mod Name",
