Adds fake orders functionality for debugging
Allows users to toggle the use of fake orders for live trading during debugging, enhancing testing capabilities. This feature reads/writes orders from the local file system, enabling controlled simulations.

Also, introduces file caching to improve performance when fake orders are enabled.

--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1867,6 +1867,8 @@
         },
         "debugging": {
           "title": "Debugging",
+          "fake_orders_tooltip": "Toggle Fake Orders for Live Trading (For Testing Purposes Only) will be stored in dev.kenya.quantframe\\fake_orders",
+          "fake_orders_label": "Use Fake Orders Live orders",
           "datatable": {
             "columns": {
               "wfm_url": {
