--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -1935,6 +1935,17 @@
               }
             }
           }
+        },
+        "ee_log": {
+          "title": "EE Log",
+          "hide_empty": "Hide Empty Lines",
+          "export_json_tooltip": "Export Items to JSON",
+          "datatable": {
+            "columns": {
+              "line": "Line",
+              "date": "Timestamp"
+            }
+          }
         }
       }
     },
